fix: login check before add to collections

--- a/views/artwork_portrait.hbs
+++ b/views/artwork_portrait.hbs
@@ -31,7 +31,7 @@
             {{/each}}
           </p>
 
-          <div class="d-flex justify-content-center align-items-center mx-auto mt-3 button-area d-inline-block">
+          <div class="d-flex justify-content-center align-items-center mx-auto mt-3 button-area d-inline-block" style="max-width: 250px">
             <button type="button" class="btn btn-sm btn-link modal_btn addCollection_btn me-3"
               data-bs-target="#editCollection_{{artwork.id}}">
               {{#if artwork.isAdded}}
