--- a/views/artworks.hbs
+++ b/views/artworks.hbs
@@ -344,14 +344,14 @@
     // check logout before submit add collection / favorite
     const ifLogout = document.querySelector('.fa-circle-user')
     const login_alert = new bootstrap.Modal(document.getElementById('login_alert'))
-    if (ifLogout) login_alert.show() 
     let target = event.target
 
     // add favorites button
     if (target.classList.contains('favorite_btn')) {
       event.stopPropagation()
       event.preventDefault()
-      if (!ifLogout) {
+      if (ifLogout) login_alert.show() 
+      else {
         let form
         if (target.tagName === 'I') {
           form = target.parentElement.parentElement
@@ -363,33 +363,36 @@
     }
 
     // add collection button: 
-    if (target.classList.contains('modal_btn') && !ifLogout) {
+    if (target.classList.contains('modal_btn')) {
       let workId
       if (target.tagName === 'I') {
         workId = target.parentElement.getAttribute('data-bs-target').split('_')[1]
       } else {
         workId = target.getAttribute('data-bs-target').split('_')[1]
       }
-      
-      const modalCalled = new bootstrap.Modal(document.getElementById(`editCollection_${workId}`))
-      modalCalled.show()
-      try {
-        let response = await axios.get('/api/collections')
-        let ownCollections = response.data
-        let modal_select = document.getElementById(`selectWork_${workId}`)
-        removeAllChild(modal_select)
 
-        ownCollections.forEach(col => {
-          let option = document.createElement('option')
-          option.setAttribute('value', col.id)
-          if (col.JoinedArtworks.find(work => work.id === Number(workId))) {
-            option.setAttribute('selected', "")
-          }
-          option.innerText = `${col.name} (${col.workCount} pieces)`
-          modal_select.appendChild(option)
-        })
-      } catch (error) {
-        console.log(error)
+      if (ifLogout) login_alert.show()
+      else {
+        const modalCalled = new bootstrap.Modal(document.getElementById(`editCollection_${workId}`))
+        modalCalled.show()
+        try {
+          let response = await axios.get('/api/collections')
+          let ownCollections = response.data
+          let modal_select = document.getElementById(`selectWork_${workId}`)
+          removeAllChild(modal_select)
+
+          ownCollections.forEach(col => {
+            let option = document.createElement('option')
+            option.setAttribute('value', col.id)
+            if (col.JoinedArtworks.find(work => work.id === Number(workId))) {
+              option.setAttribute('selected', "")
+            }
+            option.innerText = `${col.name} (${col.workCount} pieces)`
+            modal_select.appendChild(option)
+          })
+        } catch (error) {
+          console.log(error)
+        }
       }
     }
   })
