--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -40,12 +40,26 @@
             </li>
             {{/unless}}
             {{#if user}}
-            <li class="nav-item mx-2">
-              <form action="/user/logout" method="post" id="logout" title="Logout">
-                <button class="btn" type="submit" form="logout">
-                  <i class="fa-solid fa-arrow-right-from-bracket"></i> 
-                </button>
-              </form>
+            <li class="nav-item ms-2 me-5 dropdown">
+
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                <i class="fa-solid fa-circle-user"></i>
+              </a>
+              
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="/user/profile">Edit profile</a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                  <form class="dropdown-item" action="/user/logout" method="post" id="logout" title="Logout">
+                    <button class="btn btn-sm" type="submit" form="logout">
+                      <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    </button>
+                  </form>
+                </li>
+              </ul>
             </li>
             {{else}}
             <li class="nav-item mx-2">
