feat: add loading spinner, remove logo link

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,7 +15,7 @@
     {{!-- Navbar --}}
     <nav class="navbar navbar-expand-lg fixed-top navbar-light trans">
       <div class="container-fluid mx-5">
-        <a class="navbar-brand" href="/"> GALLERY </a>
+        <div class="navbar-brand"> GALLERY </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -99,6 +99,16 @@
     </div>
     </div>
 
+    <!-- Loading spinner -->
+    <div class="center" id="spinner" style="background-color: rgba(255, 255, 255, 0)">
+      <div class="lds-ellipsis" tabindex="-1">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -111,18 +121,32 @@
       let lastScrollY = 0
       window.addEventListener('scroll', function() {
         let st = this.scrollY
-        if (st > lastScrollY) {  // 向下滑動
+        if (st > lastScrollY) {  // scrolling downward
           navbar.classList.add('d-none')
         } else {
           navbar.classList.remove('d-none', 'trans')
           navbar.classList.add('bg-light')
         }
-        if (st === 0) {  // 回到起始位置
+        if (st === 0) {  // back to front
           navbar.classList.remove('bg-light')
           navbar.classList.add('trans')
         }
         lastScrollY = st
       })
+
+      // loading spinner
+      let spinner = document.getElementById('spinner')
+      document.addEventListener('readystatechange', (event) => {
+        if (document.readyState !== 'complete') {
+          spinner.style.display = 'block'
+        } else {
+          spinner.style.display = 'none'
+        }
+      }) 
+      window.addEventListener('beforeunload', (event) => {
+        spinner.style.display = 'block'
+      })
+
     </script>
   </body>
 </html>
