--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,7 @@ img {
 
 .grid-item-exhWork {
   float: left;
-  width: 230px;
+  width: 220px;
   margin: 10px;
 }
 
@@ -224,6 +224,82 @@ img {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* Loading Spinner */
+.center {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  max-height: 200px;
+}
+
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  left: -40px;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: rgb(23, 179, 158);
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  100% {
+    transform: translate(24px, 0);
+  }
 }
 
 /* 100% Image Width on Smaller Screens */
