--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,20 +6,19 @@
     <form class="form-signup" action="/user/signup" method="POST" style="width: 540px;">
       <div class="form-row mb-3">
         <label class="form-label" for="name">Name</label>
-        <input type="text" id="name" name="name" class="form-control" placeholder="Name" required autofocus>
+        <input type="text" id="name" name="name" class="form-control" placeholder="Name" maxlength="20" required autofocus>
       </div>
       <div class="form-row mb-3">
         <label class="form-label" for="email">Email</label>
-        <input type="text" id="email" name="email" class="form-control" placeholder="Email" required>
+        <input type="text" id="email" name="email" class="form-control" placeholder="Email" maxlength="254" required>
       </div>
       <div class="form-row mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+        <label class="form-label" for="password">Password<small class="text-muted ms-3">6-16 characters</small></label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password" minlength="6" maxlength="16" required>
       </div>
       <div class="form-row mb-3">
-        <label class="form-label" for="passwordCheck">Password Check</label>
-        <input type="password" id="passwordCheck" name="passwordCheck" class="form-control" placeholder="Password Check"
-          required>
+        <label class="form-label" for="passwordCheck">Password Check <small class="text-muted ms-3">6-16 characters</small></label>
+        <input type="password" id="passwordCheck" name="passwordCheck" class="form-control" placeholder="Password Check" minlength="6" maxlength="16" required>
       </div>
       <div class="d-grid mb-3">
         <button class="btn btn-primary" type="submit">Submit</button>
