fix: login alert - log out judgement

--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -210,7 +210,7 @@
     }
   }
   grid.addEventListener('click', async (event) => {
-    const ifLogout = document.querySelector('.fa-circle-user')
+    const ifLogout = document.querySelector('#login')
     const login_alert = new bootstrap.Modal(document.getElementById('login_alert'))
     let target = event.target
 
