--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -70,7 +70,7 @@
             </li>
             {{else}}
             <li class="nav-item mx-2">
-              <a class="nav-link" href="/user/login"><i class="fa-solid fa-circle-user"></i></a>
+              <a id="login" class="nav-link" href="/user/login"><i class="fa-solid fa-circle-user"></i></a>
             </li>
             {{/if}}
           </ul>
