--- a/views/artworks.hbs
+++ b/views/artworks.hbs
@@ -342,7 +342,7 @@
   }
   grid.addEventListener('click', async (event) => {
     // check logout before submit add collection / favorite
-    const ifLogout = document.querySelector('.fa-circle-user')
+    const ifLogout = document.querySelector('#login')
     const login_alert = new bootstrap.Modal(document.getElementById('login_alert'))
     let target = event.target
 
