fix: key words for test

--- a/views/artworks.hbs
+++ b/views/artworks.hbs
@@ -56,7 +56,7 @@
         </div>
 
         {{!-- Collapse Selections --}}
-        <div class="col-12 col-md-12 collapse card-group mb-3 {{#toggleOptions searching}} show {{/toggleOptions}}"  id="moreOptions">
+        <div class="col-12 col-md-12 card-group mb-3 collapse {{#toggleOptions searching}}show{{/toggleOptions}}"  id="moreOptions">
           <div class="card card-body" style="min-width: 15rem;">
             <label for="height_lower" class="form-label">作品尺寸 (cm) <small class="ms-2 text-muted">包含輸入尺寸　e.g.
                 80</small></label>
