--- a/views/artist.hbs
+++ b/views/artist.hbs
@@ -42,7 +42,7 @@
   <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-5 g-4 mb-5">
     {{#each artist.allMedium}}
     <div class="col">
-      <a href="/artworks/?mediumId={{this.id}}&artistId={{../artist.id}}">
+      <a href="/artworks/search?mediumId={{this.id}}&artistId={{../artist.id}}">
         <div class="card h-100">
           <img src="{{this.represent_work.ArtworkImages.url}}" style="width: 100%; height: 100px; object-fit: cover" class="card-img-top" alt="{{this.represent_work.name}}">
 
@@ -63,7 +63,7 @@
   <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-5 g-4 mb-5">
     {{#each artist.allSubjects}}
     <div class="col">
-      <a href="/artworks/?subjectId={{this.id}}&artistId={{../artist.id}}">
+      <a href="/artworks/search?subjectId={{this.id}}&artistId={{../artist.id}}">
         <div class="card h-100">
           <img src="{{this.represent_work.ArtworkImages.url}}" style="width: 100%; height: 100px; object-fit: cover"
             class="card-img-top" alt="{{this.represent_work.name}}">
