--- a/views/collection.hbs
+++ b/views/collection.hbs
@@ -245,7 +245,7 @@
         let modalCalled = new bootstrap.Modal(document.getElementById(`editCollection_${workId}`))
         modalCalled.show()
         try {
-          let response = await axios.get('/api/collections')
+          let response = await axios.get('/api/session/collections')
           let ownCollections = response.data
           let modal_select = document.getElementById(`selectWork_${workId}`)
           removeAllChild(modal_select)
