--- a/views/artist.hbs
+++ b/views/artist.hbs
@@ -44,7 +44,7 @@
     <div class="col">
       <a href="/artworks/search?mediumId={{this.id}}&artistId={{../artist.id}}">
         <div class="card h-100">
-          <img src="{{this.represent_work.ArtworkImages.url}}" style="width: 100%; height: 100px; object-fit: cover" class="card-img-top" alt="{{this.represent_work.name}}">
+          <img src="{{this.represent_work}}" style="width: 100%; height: 100px; object-fit: cover" class="card-img-top">
 
           <div class="card-body d-flex justify-content-between">
             <h5 class="card-title">{{this.name}}</h5>
@@ -65,8 +65,8 @@
     <div class="col">
       <a href="/artworks/search?subjectId={{this.id}}&artistId={{../artist.id}}">
         <div class="card h-100">
-          <img src="{{this.represent_work.ArtworkImages.url}}" style="width: 100%; height: 100px; object-fit: cover"
-            class="card-img-top" alt="{{this.represent_work.name}}">
+          <img src="{{this.represent_work}}" style="width: 100%; height: 100px; object-fit: cover"
+            class="card-img-top">
 
           <div class="card-body d-flex justify-content-between">
             <h5 class="card-title">{{this.name}}</h5>
