Feat: add Facebook login

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -22,6 +22,7 @@
       </div>
       <div class="d-grid mb-3">
         <button class="btn btn-primary" type="submit">Submit</button>
+        <a href="/auth/facebook" role="button" style="color: white" class="btn btn-success mt-2">Login with Facebook</a>
       </div>
     </form>
   </div>
