--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,7 +15,8 @@
           placeholder="Password" required>
       </div>
       <div class="d-grid mb-3">
-      <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" type="submit">Submit</button>
+        <a href="/auth/facebook" role="button" style="color: white" class="btn btn-success mt-2">Facebook Login</a>
       </div>
     </form>
   </div>
