--- a/views/login.hbs
+++ b/views/login.hbs
@@ -16,7 +16,8 @@
       </div>
       <div class="d-grid mb-3">
         <button class="btn btn-primary" type="submit">Submit</button>
-        <a href="/auth/facebook" role="button" style="color: white" class="btn btn-success mt-2">Facebook Login</a>
+        <a href="/auth/facebook" role="button" style="color: white; display: none" class="btn btn-success mt-2" 
+          title="Only available to test users currently">Facebook Login</a>
       </div>
     </form>
   </div>
