--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -22,7 +22,8 @@
       </div>
       <div class="d-grid mb-3">
         <button class="btn btn-primary" type="submit">Submit</button>
-        <a href="/auth/facebook" role="button" style="color: white" class="btn btn-success mt-2">Login with Facebook</a>
+        <a href="/auth/facebook" role="button" style="color: white; display: none" class="btn btn-success mt-2"
+          title="Only available to test users currently">Facebook Login</a>
       </div>
     </form>
   </div>
