--- a/views/artwork_landscape.hbs
+++ b/views/artwork_landscape.hbs
@@ -65,7 +65,7 @@
           <div class="row">
             <div class="col-12 col-sm-3 col-lg-4 d-flex justify-content-center">
               <a href="/artists/{{this.id}}">
-                <img src="{{this.ArtistImages}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
+                <img src="{{this.headImage}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
                 style="max-width: 150px;">
               </a>
             </div>
