--- a/views/artwork_portrait.hbs
+++ b/views/artwork_portrait.hbs
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-12 col-sm-3 col-lg-4 d-flex justify-content-center">
             <a href="/artists/{{this.id}}">
-              <img src="{{this.ArtistImages}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
+              <img src="{{this.headImage}}" class="img-fluid artist-thumbnail" alt="{{this.name}}"
               style="max-width: 150px; height:auto;" title="More about Artist">
             </a>
           </div>
