--- a/views/admin/select_artworks.hbs
+++ b/views/admin/select_artworks.hbs
@@ -21,6 +21,7 @@
         <th scope="col">寬</th>
         <th scope="col">深</th>
         <th scope="col">主題</th>
+        <th scope="col">收藏數量</th>
         <th scope="col">
         </th>
       </tr>
@@ -55,6 +56,9 @@
         <th scope="col" style="max-width: 240px">
           <input type="text" class="form-control form-control-sm" id="tag">
         </th>
+        <th scope="col">
+          <input type="number" class="form-control form-control-sm" id="collectionCount" min="0" max="200">
+        </th>
         <th scope="col"></th>
       </tr>
     </thead>
@@ -83,6 +87,7 @@
           <td class="width">{{this.width}}</td>
           <td class="depth">{{this.depth}}</td>
           <td class="tag"><p><small>{{#each this.SubjectTags}} {{this.name}} {{/each}}</small></p></td>
+          <td class="collectionCount">{{this.collection_count}}</td>
           <td>
             <div class="btn-group" role="group">
               <a href="/admin/artworks/{{this.id}}">
@@ -123,6 +128,7 @@
   let width_td = document.querySelectorAll('td.width')
   let depth_td = document.querySelectorAll('td.depth')
   let tag_td = document.querySelectorAll('td.tag')
+  let collection_td = document.querySelectorAll('td.collectionCount')
 
   query.addEventListener('input', (event) => {
     let id_input = document.getElementById('id')
@@ -135,6 +141,7 @@
     let width_input = document.getElementById('width')
     let depth_input = document.getElementById('depth')
     let tag_input = document.getElementById('tag')
+    let collection_input = document.getElementById('collectionCount')
 
     for (let i = 0; i < tr.length; i++) {
       if (id_td[i].innerText.includes(id_input.value) && 
@@ -146,7 +153,8 @@
         height_td[i].innerText.includes(height_input.value) &&
         width_td[i].innerText.includes(width_input.value) &&
         depth_td[i].innerText.includes(depth_input.value) &&
-        tag_td[i].innerText.includes(tag_input.value)
+        tag_td[i].innerText.includes(tag_input.value) &&
+        collection_td[i].innerText >= collection_input.value
       ) {
         tr[i].style.display = ""
       } else {
