--- a/views/exhibition_artworks.hbs
+++ b/views/exhibition_artworks.hbs
@@ -108,7 +108,7 @@
         <div class="row">
           <div class="col-sm-3 col-lg-12 d-flex justify-content-center">
             <a href="/artists/{{this.id}}">
-              <img src="{{this.ArtistImages}}" class="img-fluid artist-thumbnail mx-auto" alt="{{this.name}}" style="max-width: 150px">
+              <img src="{{this.headImage}}" class="img-fluid artist-thumbnail mx-auto" alt="{{this.name}}" style="max-width: 150px">
             </a>
           </div>
           <div class="col-sm-9 col-lg-12 align-self-center">
