feat: GET /reservations/create

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -67,6 +67,9 @@
                 <li>
                   <a class="dropdown-item" href="/user/profile">Edit profile</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="/reservations/create">Reservation</a>
+                </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
                   <form class="dropdown-item" action="/user/logout" method="post" id="logout" title="Logout">
