feat: GET /reservations, fix timezone

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -65,10 +65,10 @@
               
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
-                  <a class="dropdown-item" href="/user/profile">Edit profile</a>
+                  <a class="dropdown-item" href="/user/profile">Profile</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/reservations/create">Reservation</a>
+                  <a class="dropdown-item" href="/reservations">Reservation</a>
                 </li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
